# esniper

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  auction.c  auction.h  auctionfile.c  auctionfile.h  auctioninfo.c  auctioninfo.h  buffer.c  buffer.h  configure  configure.in  esniper.1  esniper.c  esniper.h  esniper_man.html  history.c  history.h  html.c  html.h  http.c  http.h  misc.mk  options.c  options.h  sample_auction.txt  sample_config.txt  util.c  util.h
frontends/: README  snipe
